--- a/README.org
+++ b/README.org
@@ -44,6 +44,16 @@ its content.
 
 ** Enero 2023
 
+*** 21-Ene-23
++ [[https://thma.github.io/posts/2023-01-21-a-haskell-persistence-layer-using-generics-and-reflection.html][Writing a Haskell persistence layer using Generics and Reflection]]. ~ Thomas Mahler. #Haskell #FunctionalProgramming
++ [[https://www.reddit.com/r/haskell/comments/10gvwkg/chatgpt_give_me_a_really_useful_example_of_a/][ChatGPT: give me a really useful example of a monad in Haskell. Explain why it is better than the alternative. write the code not using monads. To show how elegant monads are]]. #ChatGPT #Haskell #FunctionalProgramming
++ [[https://cacm.acm.org/magazines/2023/2/268950-the-premature-obituary-of-programming][The premature obituary of programming]]. ~ Daniel M. Yellin. #Programming #AI
++ [[https://www.nature.com/articles/d41586-023-00107-z][ChatGPT listed as author on research papers: many scientists disapprove]]. ~ Chris Stokel-Walker. #ChatGPT
++ [[https://www.theatlantic.com/ideas/archive/2023/01/chatgpt-ai-economy-automation-jobs/672767/][How ChatGPT will destabilize white-collar work]]. ~ Annie Lowrey. #ChatGPT
++ [[https://www.wired.com/story/chatgpt-generative-artificial-intelligence-regulation][ChatGPT stole your work. So what are you going to do?]] ~ Nick Vincent, Hanlin Li. #ChatGPT
++ [[https://cacm.acm.org/magazines/2023/2/268946-can-ai-demonstrate-creativity/fulltext][Can AI demonstrate creativity?]] ~ Keith Kirkpatrick. #AI
++ [[https://www.theguardian.com/commentisfree/2023/jan/20/the-guardian-view-on-ai-in-art-a-challenge-that-must-be-met][The Guardian view on AI in art: a challenge that must be met]]. ~ Editorial. #AI
+
 *** 20-Ene-23
 + [[https://medium.com/superstringtheory/fools-errand-let-s-build-a-real-fp-language-from-scratch-in-haskell-19461b316110][FOOL’s errand: let’s build a real FP language from scratch (in Haskell). Part 1: Introduction]]. ~ Anton Antich. #Haskell #FunctionalProgramming
 + [[https://julesh.com/2023/01/14/making-haskell-lenses-less-pointless/][Making Haskell lenses less pointless]]. ~ Jules Hedges (@_julesh_). #Haskell #FunctionalProgramming
